--- a/package.json
+++ b/package.json
@@ -20,18 +20,29 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@fastify/secure-session": "^7.5.1",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/platform-fastify": "^10.3.8",
+    "@nestjs/typeorm": "^10.0.2",
+    "@types/multer": "^1.4.11",
+    "cors": "^2.8.5",
+    "express-session": "^1.18.0",
+    "mysql2": "^3.9.7",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "svg-captcha": "^1.4.0",
+    "typeorm": "^0.3.20"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.17",
+    "@types/express-session": "^1.18.0",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
     "@types/supertest": "^6.0.0",
