--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/multer": "^1.4.11",
     "cors": "^2.8.5",
     "express-session": "^1.18.0",
+    "fastify-file-interceptor": "^1.0.9",
     "mysql2": "^3.9.7",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
