--- a/package.json
+++ b/package.json
@@ -28,8 +28,11 @@
     "@nestjs/platform-fastify": "^10.3.8",
     "@nestjs/typeorm": "^10.0.2",
     "@types/multer": "^1.4.11",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "cors": "^2.8.5",
     "express-session": "^1.18.0",
+    "fastify": "^4.27.0",
     "fastify-file-interceptor": "^1.0.9",
     "mysql2": "^3.9.7",
     "reflect-metadata": "^0.2.0",
